--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,8 @@
 */
 
 body {
-  /* background-color: black; */
+  touch-action: manipulation; /* Désactive le zoom tactile sur certains navigateurs mobiles */
+  user-select: none; /* Désactive la sélection de texte pour éviter le zoom tactile */
 }
 
 ::-webkit-scrollbar {
