--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,22 @@ body {
   background-color: transparent;
   outline: 1px solid transparent;
 }
+
+.mobile-only-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+@media (min-width: 767px) {
+  .mobile-only-overlay {
+    display: flex;
+  }
+}
