--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,10 @@ body {
   z-index: 9999;
 }
 
+#spinner-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
 @media (min-width: 767px) {
   .mobile-only-overlay {
     display: flex;
