--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,17 +22,23 @@ body {
   /* user-select: none; Désactive la sélection de texte pour éviter le zoom tactile */
 }
 
+/* all scroll has width 0 */
+
+
+
 ::-webkit-scrollbar {
   width: 0;
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3);
+  /* -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3); */
+  width: 0;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  outline: 1px solid transparent;
+  /* background-color: transparent;
+  outline: 1px solid transparent; */
+  width: 0;
 }
 
 .mobile-only-overlay {
